# openrocket-python-parser

./: .gitignore  README.md  build_and_upload.prod.sh  build_and_upload.test.sh  contributing.md  pyproject.toml  requirements.txt  test_release_locally.sh
src/: __init__.py
src/openrocket_parser/: __init__.py  core.py
src/openrocket_parser/components/: bodytube.py  components.py  finset.py  motor.py  nosecone.py  rocket.py  stage.py
src/openrocket_parser/simulations/: loader.py  simulation.py  simulation_data.py
src/openrocket_parser/tools/: fabricator.py
src/openrocket_parser/tools/fabricator_tool/: main_screen.py  ork_parser.py  settings_screen.py  svg_exporter.py  ui_components.py
tests/: fuzzing_test.py  sample.ork  test_components.py  valid.xml
tools/: flight_visualizer.py
