# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openrocket-parser"
version = "0.1.0"
authors = [
  { name="AIAA UTD", email="your.email@example.com" },
]
description = "A Python library to parse OpenRocket (.ork) XML files and simulation data."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
#    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
# This is crucial! It tells pip what other libraries yours needs to run.
dependencies = [
    "pandas>=1.5.0",
]

[project.optional-dependencies]
visualizer = ["matplotlib"]

[project.urls]
"Homepage" = "https://github.com/YOUR_USERNAME/YOUR_REPOSITORY_NAME"
"Bug Tracker" = "https://github.com/YOUR_USERNAME/YOUR_REPOSITORY_NAME/issues"