# pyproject.toml

# Standard pyproject boilerplate
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
license-expression="MIT"
license-files = []

# Project specific configuration
[project]
name = "openrocket-python-parser"
# Update accordingly when a release is tagged as version.
version = "0.3.0"
authors = [
  { name="AIAA UTD Comet Rocketry, Payload", email="fenrriquez@gmail.com" },
]
description = "A Python library to parse OpenRocket (.ork) XML files, including simulation data."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
# This is crucial! It tells pip what other libraries yours needs to run.
dependencies = [
    "pandas>=1.5.0"
]

[project.optional-dependencies]
visualizer = ["matplotlib"]

[project.urls]
"Homepage" = "https://github.com/AIAA-UTD-Comet-Rocketry/openrocket-python-parser"
"Bug Tracker" = "https://github.com/AIAA-UTD-Comet-Rocketry/openrocket-python-parser/issues"

[project.scripts]
openrocket-visualizer = "openrocket_parser.tools.flight_visualizer:main"

[tool.setuptools.packages.find]
where = ["src"]
